--- a/Messenger App/app/src/main/res/values/strings.xml
+++ b/Messenger App/app/src/main/res/values/strings.xml
@@ -4,6 +4,11 @@
     <string name="hint_nickname">Enter your nickname</string>
     <string name="hint_password">Enter your password</string>
     <string name="button_sign_up">Sign up</string>
+    <string name="button_sign_out">Sign out</string>
     <string name="tv_not_registered">Not Registered?</string>
     <string name="hint_edittext_what_i_do">What I do</string>
+    <string name="bottom_navigation_item_home">home</string>
+    <string name="bottom_navigation_item_settings">settings</string>
+    <string name="button_update">Update</string>
+    <string name="search">Search</string>
 </resources>
